--- a/Lections/Lection2/lection2.ipynb
+++ b/Lections/Lection2/lection2.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "7612  The Latest: More Homes Razed by Northern Calif...       1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "(7613, 5)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "Name: target, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,9 +191,253 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>keyword</th>\n",
+       "      <th>location</th>\n",
+       "      <th>text</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>107</td>\n",
+       "      <td>accident</td>\n",
+       "      <td>North Carolina</td>\n",
+       "      <td>I-77 Mile Marker 31 South Mooresville  Iredell...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5387</th>\n",
+       "      <td>7687</td>\n",
+       "      <td>panic</td>\n",
+       "      <td>Toronto</td>\n",
+       "      <td>tomorrow's going to be a year since I went to ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4259</th>\n",
+       "      <td>6051</td>\n",
+       "      <td>heat%20wave</td>\n",
+       "      <td>Arnhem, the Netherlands</td>\n",
+       "      <td>Arnhem Weather - &amp;lt;p&amp;gt;An unrelenting and d...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2119</th>\n",
+       "      <td>3045</td>\n",
+       "      <td>death</td>\n",
+       "      <td>Home of the Takers.</td>\n",
+       "      <td>Y'all PUSSSSSSSSSY AND SHOOOK TO DEATH OF ME</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6078</th>\n",
+       "      <td>8684</td>\n",
+       "      <td>sinkhole</td>\n",
+       "      <td>Haddonfield, NJ</td>\n",
+       "      <td>Georgia sinkhole closes road swallows whole po...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>55</td>\n",
+       "      <td>ablaze</td>\n",
+       "      <td>World Wide!!</td>\n",
+       "      <td>INEC Office in Abia Set Ablaze - http://t.co/3...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2118</th>\n",
+       "      <td>3044</td>\n",
+       "      <td>death</td>\n",
+       "      <td>Carry On Jutta!!!</td>\n",
+       "      <td>Afghan peace talks in doubt after Mullah Omar'...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3931</th>\n",
+       "      <td>5589</td>\n",
+       "      <td>flood</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Internet basics: the flood defective intertiss...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>530</th>\n",
+       "      <td>770</td>\n",
+       "      <td>avalanche</td>\n",
+       "      <td>South Central Wales</td>\n",
+       "      <td>I saw two great punk bands making original mus...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4186</th>\n",
+       "      <td>5947</td>\n",
+       "      <td>hazard</td>\n",
+       "      <td>a van down by the river</td>\n",
+       "      <td>@phiddleface NOT IF THERES A CHOKING HAZARD!!!...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>125</th>\n",
+       "      <td>180</td>\n",
+       "      <td>aftershock</td>\n",
+       "      <td>304</td>\n",
+       "      <td>Sometimes you face difficulties not because yo...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>314</th>\n",
+       "      <td>457</td>\n",
+       "      <td>armageddon</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>@ENews Ben Affleck......I know there's a wife/...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3396</th>\n",
+       "      <td>4860</td>\n",
+       "      <td>evacuation</td>\n",
+       "      <td>Moncton, New Brunswick</td>\n",
+       "      <td>Gas leak forces evacuation in east Saint John ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6179</th>\n",
+       "      <td>8815</td>\n",
+       "      <td>sirens</td>\n",
+       "      <td>Sydney</td>\n",
+       "      <td>Marketforce Perth named winner of Sirens round...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <td>158</td>\n",
+       "      <td>aftershock</td>\n",
+       "      <td>Instagram - @heyimginog</td>\n",
+       "      <td>@afterShock_DeLo im speaking from someone that...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Just got sent this photo from Ruby #Alaska as ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5689</th>\n",
+       "      <td>8119</td>\n",
+       "      <td>rescued</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>@BrittanyPetko breaking news tonight kids were...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6866</th>\n",
+       "      <td>9838</td>\n",
+       "      <td>trauma</td>\n",
+       "      <td>Nashville, TN</td>\n",
+       "      <td>Esteemed journalist recalls tragic effects of ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6860</th>\n",
+       "      <td>9832</td>\n",
+       "      <td>trauma</td>\n",
+       "      <td>Little Rock, AR</td>\n",
+       "      <td>@thetimepast @saalon I have childhood trauma m...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6231</th>\n",
+       "      <td>8896</td>\n",
+       "      <td>snowstorm</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Hi yall this poem is called is the one about t...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id      keyword                  location  \\\n",
+       "74     107     accident            North Carolina   \n",
+       "5387  7687        panic                   Toronto   \n",
+       "4259  6051  heat%20wave   Arnhem, the Netherlands   \n",
+       "2119  3045        death       Home of the Takers.   \n",
+       "6078  8684     sinkhole           Haddonfield, NJ   \n",
+       "37      55       ablaze              World Wide!!   \n",
+       "2118  3044        death         Carry On Jutta!!!   \n",
+       "3931  5589        flood                       NaN   \n",
+       "530    770    avalanche       South Central Wales   \n",
+       "4186  5947       hazard   a van down by the river   \n",
+       "125    180   aftershock                       304   \n",
+       "314    457   armageddon                    Canada   \n",
+       "3396  4860   evacuation    Moncton, New Brunswick   \n",
+       "6179  8815       sirens                    Sydney   \n",
+       "108    158   aftershock  Instagram - @heyimginog    \n",
+       "4        7          NaN                       NaN   \n",
+       "5689  8119      rescued                       NaN   \n",
+       "6866  9838       trauma             Nashville, TN   \n",
+       "6860  9832       trauma           Little Rock, AR   \n",
+       "6231  8896    snowstorm                       NaN   \n",
+       "\n",
+       "                                                   text  target  \n",
+       "74    I-77 Mile Marker 31 South Mooresville  Iredell...       1  \n",
+       "5387  tomorrow's going to be a year since I went to ...       1  \n",
+       "4259  Arnhem Weather - &lt;p&gt;An unrelenting and d...       1  \n",
+       "2119       Y'all PUSSSSSSSSSY AND SHOOOK TO DEATH OF ME       0  \n",
+       "6078  Georgia sinkhole closes road swallows whole po...       1  \n",
+       "37    INEC Office in Abia Set Ablaze - http://t.co/3...       1  \n",
+       "2118  Afghan peace talks in doubt after Mullah Omar'...       0  \n",
+       "3931  Internet basics: the flood defective intertiss...       1  \n",
+       "530   I saw two great punk bands making original mus...       0  \n",
+       "4186  @phiddleface NOT IF THERES A CHOKING HAZARD!!!...       0  \n",
+       "125   Sometimes you face difficulties not because yo...       0  \n",
+       "314   @ENews Ben Affleck......I know there's a wife/...       0  \n",
+       "3396  Gas leak forces evacuation in east Saint John ...       1  \n",
+       "6179  Marketforce Perth named winner of Sirens round...       0  \n",
+       "108   @afterShock_DeLo im speaking from someone that...       0  \n",
+       "4     Just got sent this photo from Ruby #Alaska as ...       1  \n",
+       "5689  @BrittanyPetko breaking news tonight kids were...       1  \n",
+       "6866  Esteemed journalist recalls tragic effects of ...       1  \n",
+       "6860  @thetimepast @saalon I have childhood trauma m...       0  \n",
+       "6231  Hi yall this poem is called is the one about t...       0  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_shuffle=train_df.sample(frac=1,random_state=49) \n",
     "train_shuffle.head(20)"
@@ -201,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -222,9 +466,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pandas(Index=1765, text='my favorite lady came to our volunteer meeting\\nhopefully joining her youth collision and i am excite http://t.co/Ij0wQ490cS', target=1)\n",
+      "Pandas(Index=139, text='Experts in France begin examining airplane debris found on Reunion Island: French air accident experts on Wedn... http://t.co/bKpFpOGySI', target=1)\n",
+      "Pandas(Index=3564, text=\"I've experienced the smell of rotting potatoes for the first time. The Famine must have been awful if the whole country smelled like that.\", target=1)\n",
+      "Pandas(Index=6894, text='@disneyIrh so traumatised im ???? http://t.co/TATZfK63Ch', target=1)\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "\n",
@@ -236,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +516,7 @@
        "(dtype('O'), dtype('int64'))"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +536,7 @@
        "(6851, 762)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +588,7 @@
        "          0,   0]], dtype=int64)>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,16 +634,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<keras.layers.embeddings.Embedding at 0x1b9dcefa388>"
+       "<keras.layers.embeddings.Embedding at 0x22746e5cb88>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,29 +654,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "<tf.Tensor: shape=(15, 128), dtype=float32, numpy=\n",
-       "array([[ 0.01231587, -0.00256255,  0.04978896, ...,  0.0468483 ,\n",
-       "        -0.01590898, -0.03175728],\n",
-       "       [-0.01817663, -0.04545405, -0.03042921, ...,  0.02274327,\n",
-       "        -0.0182047 , -0.01355995],\n",
-       "       [-0.01948857,  0.00554798,  0.03427506, ...,  0.03786555,\n",
-       "        -0.03715464, -0.02071316],\n",
+       "array([[ 0.04459265, -0.01684532,  0.02759372, ..., -0.04119661,\n",
+       "         0.03914695, -0.02494565],\n",
+       "       [ 0.01291105,  0.00410497, -0.00692033, ..., -0.0049533 ,\n",
+       "         0.0152256 ,  0.01226714],\n",
+       "       [ 0.02960142, -0.01097136, -0.04539039, ...,  0.04619695,\n",
+       "        -0.03740982,  0.00810456],\n",
        "       ...,\n",
-       "       [ 0.03924679,  0.02573956,  0.03817136, ..., -0.00771222,\n",
-       "        -0.02599858,  0.01145264],\n",
-       "       [ 0.03924679,  0.02573956,  0.03817136, ..., -0.00771222,\n",
-       "        -0.02599858,  0.01145264],\n",
-       "       [ 0.03924679,  0.02573956,  0.03817136, ..., -0.00771222,\n",
-       "        -0.02599858,  0.01145264]], dtype=float32)>"
+       "       [ 0.01519274, -0.02291369,  0.01295135, ..., -0.03606644,\n",
+       "         0.02298403,  0.00444556],\n",
+       "       [ 0.01519274, -0.02291369,  0.01295135, ..., -0.03606644,\n",
+       "         0.02298403,  0.00444556],\n",
+       "       [ 0.01519274, -0.02291369,  0.01295135, ..., -0.03606644,\n",
+       "         0.02298403,  0.00444556]], dtype=float32)>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,6 +685,13 @@
     "sample_embed = embedding(text_vectorizer(\"I Love Tensorflow\"))\n",
     "sample_embed"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
